tests/diagnostics/expressions/match/use_matches_for_boolean_check/expect.txt
# exit: 1
input/lib.coppice:2:12: error: use 'matches' for single-pattern boolean checks
      return match value {
             ^
